--- a/aj_jewellery/package.json
+++ b/aj_jewellery/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "socket.io-client": "^4.6.1",
     "sweetalert2": "^11.7.5",
     "sweetalert2-react-content": "^5.0.7",
     "swiper": "^9.0.5",
